workshop/teams-management/teams-app/k8s/teams-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teams-api-service
  namespace: teams-api
spec:
  selector:
    app: teams-api
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 8000
  type: ClusterIP
