workshop/teams-management/teams-app/k8s/ingress.yaml
# # k8s/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: engineering-platform-ingress
#   namespace: engineering-platform
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
#     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
#     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
#     nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: engineering-platform.local
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: teams-ui-service
#             port:
#               number: 80
#       - path: /api
#         pathType: Prefix
#         backend:
#           service:
#             name: teams-api-service
#             port:
#               number: 8000
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teams-ui-ingress
  namespace: engineering-platform
spec:
  ingressClassName: nginx
  rules:
  - host: teams-ui.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: teams-ui-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teams-api-ingress
  namespace: teams-api
spec:
  ingressClassName: nginx
  rules:
  - host: team-api.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: teams-api-service
            port:
              number: 4200
